--- a/index.html
+++ b/index.html
@@ -1,107 +1,362 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chatter AI</title>
     <script src="https://js.puter.com/v2/"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <style>
-        :root {
-            --bg-dark: #212121;
-            --sidebar-dark: #171717;
-            --text-main: #ececec;
-            --accent: #3d3d3d;
-            --user-msg: #2f2f2f;
-            --border: #424242;
-            --code-bg: #000;
-            --sidebar-width: 260px;
-        }
+      :root {
+        --bg-dark: #212121;
+        --sidebar-dark: #171717;
+        --text-main: #ececec;
+        --accent: #3d3d3d;
+        --user-msg: #2f2f2f;
+        --border: #424242;
+        --code-bg: #000;
+        --sidebar-width: 260px;
+      }
 
-        * { box-sizing: border-box; }
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-            background: var(--bg-dark);
-            color: var(--text-main);
-            display: flex;
-            height: 100vh;
-            margin: 0;
-            overflow: hidden;
-        }
+      * {
+        box-sizing: border-box;
+      }
+      body {
+        font-family:
+          -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+        background: var(--bg-dark);
+        color: var(--text-main);
+        display: flex;
+        height: 100vh;
+        margin: 0;
+        overflow: hidden;
+      }
 
-        /* --- Sidebar & Overlay --- */
+      /* --- Sidebar & Overlay --- */
+      #sidebar {
+        width: var(--sidebar-width);
+        background-color: var(--sidebar-dark);
+        display: flex;
+        flex-direction: column;
+        padding: 15px;
+        border-right: 1px solid var(--border);
+        transition: transform 0.3s ease;
+        z-index: 1000;
+      }
+
+      #overlay {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(0, 0, 0, 0.5);
+        z-index: 900;
+      }
+
+      .new-chat-btn {
+        border: 1px solid var(--border);
+        padding: 10px;
+        border-radius: 8px;
+        cursor: pointer;
+        font-size: 0.9rem;
+        margin-bottom: 20px;
+        text-align: center;
+      }
+      .new-chat-btn:hover {
+        background: var(--accent);
+      }
+
+      #history-list {
+        flex: 1;
+        overflow-y: auto;
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+      }
+      .history-item {
+        padding: 10px;
+        border-radius: 5px;
+        font-size: 0.85rem;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        cursor: pointer;
+      }
+      .history-item:hover {
+        background: var(--accent);
+      }
+
+      /* --- Main Content --- */
+      #main-container {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        min-width: 0; /* Prevents flex items from overflowing */
+      }
+
+      header {
+        padding: 10px 15px;
+        font-weight: bold;
+        border-bottom: 1px solid var(--border);
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        height: 50px;
+      }
+
+      #menu-toggle {
+        display: none;
+        background: none;
+        border: none;
+        color: white;
+        font-size: 1.5rem;
+        cursor: pointer;
+      }
+
+      #chatter {
+        flex: 1;
+        overflow-y: auto;
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+      }
+
+      .msg-container {
+        width: 100%;
+        padding: 15px 0;
+        display: flex;
+        justify-content: center;
+      }
+      .msg-content {
+        width: 100%;
+        max-width: 750px;
+        padding: 0 15px;
+        display: flex;
+        flex-direction: column;
+      }
+
+      .user-container .msg-text {
+        background: var(--user-msg);
+        padding: 12px 18px;
+        border-radius: 20px;
+        align-self: flex-end;
+        max-width: 85%;
+        word-wrap: break-word;
+      }
+
+      .ai-container .msg-text {
+        align-self: flex-start;
+        width: 100%;
+        font-size: 0.95rem;
+      }
+      .msg-text pre {
+        background: var(--code-bg);
+        padding: 15px;
+        border-radius: 8px;
+        overflow-x: auto;
+        font-size: 0.85rem;
+      }
+      .msg-text code {
+        font-family: monospace;
+        background: rgba(255, 255, 255, 0.1);
+        padding: 2px 4px;
+        border-radius: 4px;
+      }
+
+      /* Tool Status Bubble */
+      .status-bubble {
+        font-size: 0.75rem;
+        background: var(--accent);
+        padding: 5px 12px;
+        border-radius: 15px;
+        margin-bottom: 10px;
+        display: inline-block;
+        align-self: flex-start;
+      }
+
+      /* --- Input --- */
+      .input-wrapper {
+        padding: 15px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background: var(--bg-dark);
+      }
+      .input-box {
+        width: 100%;
+        max-width: 750px;
+        background: var(--user-msg);
+        border-radius: 20px;
+        padding: 10px 15px;
+        border: 1px solid var(--border);
+        display: flex;
+        align-items: center;
+      }
+      textarea {
+        flex: 1;
+        background: transparent;
+        border: none;
+        color: white;
+        outline: none;
+        resize: none;
+        font-size: 1rem;
+        max-height: 150px;
+      }
+
+      /* --- Mobile Responsiveness --- */
+      @media (max-width: 768px) {
         #sidebar {
-            width: var(--sidebar-width);
-            background-color: var(--sidebar-dark);
-            display: flex;
-            flex-direction: column;
-            padding: 15px;
-            border-right: 1px solid var(--border);
-            transition: transform 0.3s ease;
-            z-index: 1000;
+          position: fixed;
+          top: 0;
+          left: 0;
+          bottom: 0;
+          transform: translateX(-100%);
         }
-
-        #overlay {
-            display: none;
-            position: fixed;
-            top: 0; left: 0; right: 0; bottom: 0;
-            background: rgba(0,0,0,0.5);
-            z-index: 900;
+        #sidebar.open {
+          transform: translateX(0);
         }
-
-        .new-chat-btn {
-            border: 1px solid var(--border);
-            padding: 10px;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 0.9rem;
-            margin-bottom: 20px;
-            text-align: center;
+        #overlay.open {
+          display: block;
         }
-        .new-chat-btn:hover { background: var(--accent); }
-
-        #history-list { flex: 1; overflow-y: auto; display: flex; flex-direction: column; gap: 8px; }
-        .history-item {
-            padding: 10px;
-            border-radius: 5px;
-            font-size: 0.85rem;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            cursor: pointer;
-        }
-        .history-item:hover { background: var(--accent); }
-
-        /* --- Main Content --- */
-        #main-container {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            min-width: 0; /* Prevents flex items from overflowing */
-        }
-
-        header {
-            padding: 10px 15px;
-            font-weight: bold;
-            border-bottom: 1px solid var(--border);
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            height: 50px;
-        }
-
         #menu-toggle {
-            display: none;
-            background: none; border: none; color: white;
-            font-size: 1.5rem; cursor: pointer;
+          display: block;
+        }
+        .msg-content {
+          max-width: 100%;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div id="overlay" onclick="toggleSidebar()"></div>
+
+    <div id="sidebar">
+      <div class="new-chat-btn" onclick="location.reload()">+ New Chat</div>
+      <div id="history-list"></div>
+    </div>
+
+    <div id="main-container">
+      <header>
+        <button id="menu-toggle" onclick="toggleSidebar()">☰</button>
+        <span>Chatter</span>
+        <span style="font-size: 0.7rem; color: #4caf50"
+          >Claude 4.5 + Search</span
+        >
+      </header>
+
+      <div id="chatter"></div>
+
+      <div class="input-wrapper">
+        <div
+          id="drop-zone"
+          style="font-size: 0.7rem; color: #888; margin-bottom: 5px"
+        >
+          📎 Drop image to analyze
+        </div>
+        <div class="input-box">
+          <textarea
+            id="user-input"
+            rows="1"
+            placeholder="Message Chatter..."
+          ></textarea>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      let currentImage = null;
+
+      // Sidebar Toggle
+      function toggleSidebar() {
+        document.getElementById("sidebar").classList.toggle("open");
+        document.getElementById("overlay").classList.toggle("open");
+      }
+
+      // Handle Image Drop
+      const dropZone = document.getElementById("drop-zone");
+      document.body.ondragover = (e) => {
+        e.preventDefault();
+        dropZone.style.color = "#4caf50";
+      };
+      document.body.ondrop = (e) => {
+        e.preventDefault();
+        const file = e.dataTransfer.files[0];
+        if (file && file.type.startsWith("image/")) {
+          currentImage = file;
+          dropZone.innerHTML = `🖼️ ${file.name} ready`;
+        }
+      };
+
+      function createMsg(role) {
+        const chatter = document.getElementById("chatter");
+        const container = document.createElement("div");
+        container.className = `msg-container ${role}-container`;
+        const content = document.createElement("div");
+        content.className = "msg-content";
+        const text = document.createElement("div");
+        text.className = "msg-text";
+        content.appendChild(text);
+        container.appendChild(content);
+        chatter.appendChild(container);
+        return text;
+      }
+
+      async function sendMessage() {
+        const input = document.getElementById("user-input");
+        const prompt = input.value.trim();
+        if (!prompt && !currentImage) return;
+
+        // History UI
+        if (prompt) {
+          const item = document.createElement("div");
+          item.className = "history-item";
+          item.innerText = prompt;
+          document.getElementById("history-list").prepend(item);
         }
 
-        #chatter {
-            flex: 1;
-            overflow-y: auto;
-            padding: 10px;
-            display: flex;
-            flex-direction: column;
-        }
+        createMsg("user").innerText = prompt || "Sent an image";
+        const aiText = createMsg("ai");
+        const status = document.createElement("div");
+        status.className = "status-bubble";
+        status.innerText = "Searching & Thinking...";
+        aiText.parentNode.insertBefore(status, aiText);
 
-        .msg-container { width: 100%; padding
+        input.value = "";
+        let fullOutput = "";
+
+        try {
+          // Puter 2026: Search is now defined as a tool type
+          const response = await puter.ai.chat(prompt || "Analyze this", {
+            model: "claude-sonnet-4.5",
+            stream: true,
+            image: currentImage,
+            tools: [{ type: "web_search" }],
+          });
+
+          for await (const part of response) {
+            if (status) status.remove();
+            if (part?.text) {
+              fullOutput += part.text;
+              aiText.innerHTML = marked.parse(fullOutput);
+              document.getElementById("chatter").scrollTop =
+                document.getElementById("chatter").scrollHeight;
+            }
+          }
+        } catch (err) {
+          aiText.innerText = "Error: " + err.message;
+        }
+        currentImage = null;
+        dropZone.innerHTML = "📎 Drop image to analyze";
+      }
+
+      document.getElementById("user-input").addEventListener("keydown", (e) => {
+        if (e.key === "Enter" && !e.shiftKey) {
+          e.preventDefault();
+          sendMessage();
+        }
+      });
+    </script>
+  </body>
+</html>
